// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateProject > generates simple path aliases when enabled 1`] = `
">>> index.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate

export * as Simple from './simple/index';
>>> simple/endpoints.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { Operations, ResponseFor, SuccessResponseFor } from './operations';

type ResponseMapOf<T> = T extends { responses: infer R } ? R : never;

export type Endpoints = {
  "GET /api/v1/something-here/here_too": Operations["GetSimpleAliasPath"];
  "GET /foo_bar": Operations["GetFooBar"];
  "GET /foo-bar": Operations["GetFooBar2"];
  "GET /users/{id}": Operations["GetUsersById"];
};

export type EndpointKey = keyof Endpoints;
export type EndpointFor<Key extends EndpointKey> = Endpoints[Key];
export type ParamsFor<T> = T extends { params: infer P } ? P : never;
export type RequestBodyFor<T> = T extends { requestBody: infer B } ? B : never;
export type EndpointResponseFor<T, Code extends keyof ResponseMapOf<T>> = ResponseFor<T, Code>;
export type EndpointSuccessResponseFor<T> = SuccessResponseFor<T>;
>>> simple/index.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
export * from './paths';
export * from './schemas';
export * from './simple';
export * from './operations';
export * from './endpoints';
export * from './meta';
>>> simple/meta.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate

export const meta = {
  "name": "simple",
  "namespace": "Simple",
  "source": "schemas/simple.json",
  "format": "openapi3",
  "openapiVersion": "3.0.3",
  "schemaHash": "3044a7e3b5a6bccac346f401fd598303e2cbf6f6cd3dcb194118889c3d8e8bb8"
} as const;
>>> simple/operations.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { paths } from './paths';

type ValueOf<T> = T[keyof T];
type ExtractContent<T> = T extends { content: infer Content extends Record<PropertyKey, unknown> } ? ValueOf<Content> : void;
type ResponseMapOf<T> = T extends { responses: infer R } ? R : never;

type GetSimpleAliasPathBase = paths["/api/v1/something-here/here_too"]["get"];
type GetSimpleAliasPathResponses = GetSimpleAliasPathBase extends { responses: infer R } ? R : {};
type GetFooBarBase = paths["/foo_bar"]["get"];
type GetFooBarResponses = GetFooBarBase extends { responses: infer R } ? R : {};
type GetFooBar2Base = paths["/foo-bar"]["get"];
type GetFooBar2Responses = GetFooBar2Base extends { responses: infer R } ? R : {};
type GetUsersByIdBase = paths["/users/{id}"]["get"];
type GetUsersByIdResponses = GetUsersByIdBase extends { responses: infer R } ? R : {};

export type Operations = {
  GetSimpleAliasPath: {
    method: "get";
    path: "/api/v1/something-here/here_too";
    params: GetSimpleAliasPathBase extends { parameters: infer P } ? P : {};
    responses: GetSimpleAliasPathResponses;
    response: ExtractContent<GetSimpleAliasPathResponses["200"]>;
  };
  GetFooBar: {
    method: "get";
    path: "/foo_bar";
    params: GetFooBarBase extends { parameters: infer P } ? P : {};
    responses: GetFooBarResponses;
    response: ExtractContent<GetFooBarResponses["200"]>;
  };
  GetFooBar2: {
    method: "get";
    path: "/foo-bar";
    params: GetFooBar2Base extends { parameters: infer P } ? P : {};
    responses: GetFooBar2Responses;
    response: ExtractContent<GetFooBar2Responses["200"]>;
  };
  GetUsersById: {
    method: "get";
    path: "/users/{id}";
    params: GetUsersByIdBase extends { parameters: infer P } ? P : {};
    responses: GetUsersByIdResponses;
    response: ExtractContent<GetUsersByIdResponses["200"]>;
  };
};

export type OperationName = keyof Operations;
export type OperationFor<Name extends OperationName> = Operations[Name];
export type ResponseFor<T, Code extends keyof ResponseMapOf<T>> = ExtractContent<ResponseMapOf<T>[Code]>;
export type SuccessResponseFor<T> = T extends { response: infer R } ? R : never;
>>> simple/paths.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate

export interface paths {
    "/api/v1/something-here/here_too": {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        get: operations["getSimpleAliasPath"];
        put?: never;
        post?: never;
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
    "/foo_bar": {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        get: {
            parameters: {
                query?: never;
                header?: never;
                path?: never;
                cookie?: never;
            };
            requestBody?: never;
            responses: {
                /** @description OK */
                200: {
                    headers: {
                        [name: string]: unknown;
                    };
                    content?: never;
                };
            };
        };
        put?: never;
        post?: never;
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
    "/foo-bar": {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        get: {
            parameters: {
                query?: never;
                header?: never;
                path?: never;
                cookie?: never;
            };
            requestBody?: never;
            responses: {
                /** @description OK */
                200: {
                    headers: {
                        [name: string]: unknown;
                    };
                    content?: never;
                };
            };
        };
        put?: never;
        post?: never;
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
    "/users/{id}": {
        parameters: {
            query?: never;
            header?: never;
            path: {
                id: string;
            };
            cookie?: never;
        };
        get: {
            parameters: {
                query?: never;
                header?: never;
                path: {
                    id: string;
                };
                cookie?: never;
            };
            requestBody?: never;
            responses: {
                /** @description User found */
                200: {
                    headers: {
                        [name: string]: unknown;
                    };
                    content: {
                        "application/json": components["schemas"]["User"];
                    };
                };
            };
        };
        put?: never;
        post?: never;
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
}
export type webhooks = Record<string, never>;
export interface components {
    schemas: {
        SimpleResponse: {
            ok: boolean;
        };
        User: {
            id: string;
            name: string;
        };
    };
    responses: never;
    parameters: never;
    requestBodies: never;
    headers: never;
    pathItems: never;
}
export type $defs = Record<string, never>;
export interface operations {
    getSimpleAliasPath: {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        requestBody?: never;
        responses: {
            /** @description OK */
            200: {
                headers: {
                    [name: string]: unknown;
                };
                content: {
                    "application/json": components["schemas"]["SimpleResponse"];
                };
            };
        };
    };
}
>>> simple/schemas.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { components } from './paths';

export type Components = components;
export type Schemas = components extends { schemas: infer T } ? T : never;
export type Parameters = components extends { parameters: infer T } ? T : never;
export type Responses = components extends { responses: infer T } ? T : never;
export type RequestBodies = components extends { requestBodies: infer T } ? T : never;
export type Headers = components extends { headers: infer T } ? T : never;
export type SimpleResponse = Schemas["SimpleResponse"];
export type User = Schemas["User"];
>>> simple/simple.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { paths } from './paths';

export type HereTooSomethingHereV1API = paths["/api/v1/something-here/here_too"];
export type FooBarAPI = paths["/foo_bar"];
export type FooBarAPI2 = paths["/foo-bar"];
export type UsersByIdAPI = paths["/users/{id}"];"
`;

exports[`generateProject > generates the expected output for a basic schema fixture 1`] = `
">>> core/endpoints.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { Operations, ResponseFor, SuccessResponseFor } from './operations';

type ResponseMapOf<T> = T extends { responses: infer R } ? R : never;

export type Endpoints = {
  "GET /health": Operations["GetHealth"];
  "GET /users/{id}": Operations["GetUser"];
  "POST /users": Operations["PostUsers"];
};

export type EndpointKey = keyof Endpoints;
export type EndpointFor<Key extends EndpointKey> = Endpoints[Key];
export type ParamsFor<T> = T extends { params: infer P } ? P : never;
export type RequestBodyFor<T> = T extends { requestBody: infer B } ? B : never;
export type EndpointResponseFor<T, Code extends keyof ResponseMapOf<T>> = ResponseFor<T, Code>;
export type EndpointSuccessResponseFor<T> = SuccessResponseFor<T>;
>>> core/index.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
export * from './paths';
export * from './schemas';
export * from './operations';
export * from './endpoints';
export * from './meta';
>>> core/meta.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate

export const meta = {
  "name": "core",
  "namespace": "Core",
  "source": "schemas/petstore.json",
  "format": "openapi3",
  "openapiVersion": "3.0.3",
  "schemaHash": "b1234f21059dac0b3742b67d8e771cb3ccc2983570b8c828df85a4d8bb8a2a70"
} as const;
>>> core/operations.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { paths } from './paths';

type ValueOf<T> = T[keyof T];
type ExtractContent<T> = T extends { content: infer Content extends Record<PropertyKey, unknown> } ? ValueOf<Content> : void;
type ResponseMapOf<T> = T extends { responses: infer R } ? R : never;

type GetHealthBase = paths["/health"]["get"];
type GetHealthResponses = GetHealthBase extends { responses: infer R } ? R : {};
type GetUserBase = paths["/users/{id}"]["get"];
type GetUserResponses = GetUserBase extends { responses: infer R } ? R : {};
type PostUsersBase = paths["/users"]["post"];
type PostUsersResponses = PostUsersBase extends { responses: infer R } ? R : {};

export type Operations = {
  GetHealth: {
    method: "get";
    path: "/health";
    params: GetHealthBase extends { parameters: infer P } ? P : {};
    responses: GetHealthResponses;
    response: ExtractContent<GetHealthResponses["204"]>;
  };
  GetUser: {
    method: "get";
    path: "/users/{id}";
    params: GetUserBase extends { parameters: infer P } ? P : {};
    responses: GetUserResponses;
    response: ExtractContent<GetUserResponses["200"]>;
  };
  PostUsers: {
    method: "post";
    path: "/users";
    params: PostUsersBase extends { parameters: infer P } ? P : {};
    requestBody: PostUsersBase extends { requestBody: infer B } ? ExtractContent<B> : never;
    responses: PostUsersResponses;
    response: ExtractContent<PostUsersResponses["201"]>;
  };
};

export type OperationName = keyof Operations;
export type OperationFor<Name extends OperationName> = Operations[Name];
export type ResponseFor<T, Code extends keyof ResponseMapOf<T>> = ExtractContent<ResponseMapOf<T>[Code]>;
export type SuccessResponseFor<T> = T extends { response: infer R } ? R : never;
>>> core/paths.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate

export interface paths {
    "/health": {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        get: {
            parameters: {
                query?: never;
                header?: never;
                path?: never;
                cookie?: never;
            };
            requestBody?: never;
            responses: {
                /** @description Healthy */
                204: {
                    headers: {
                        [name: string]: unknown;
                    };
                    content?: never;
                };
            };
        };
        put?: never;
        post?: never;
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
    "/users": {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        get?: never;
        put?: never;
        post: {
            parameters: {
                query?: never;
                header?: never;
                path?: never;
                cookie?: never;
            };
            requestBody: {
                content: {
                    "application/json": components["schemas"]["CreateUserInput"];
                };
            };
            responses: {
                /** @description Created user */
                201: {
                    headers: {
                        [name: string]: unknown;
                    };
                    content: {
                        "application/json": components["schemas"]["User"];
                    };
                };
            };
        };
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
    "/users/{id}": {
        parameters: {
            query?: never;
            header?: never;
            path?: never;
            cookie?: never;
        };
        get: operations["GetUser"];
        put?: never;
        post?: never;
        delete?: never;
        options?: never;
        head?: never;
        patch?: never;
        trace?: never;
    };
}
export type webhooks = Record<string, never>;
export interface components {
    schemas: {
        CreateUserInput: {
            /** Format: email */
            email: string;
            name: string;
        };
        NotFound: {
            message: string;
        };
        User: {
            /** Format: email */
            email: string;
            id: string;
            name: string;
        };
    };
    responses: never;
    parameters: never;
    requestBodies: never;
    headers: never;
    pathItems: never;
}
export type $defs = Record<string, never>;
export interface operations {
    GetUser: {
        parameters: {
            query?: never;
            header?: never;
            path: {
                id: string;
            };
            cookie?: never;
        };
        requestBody?: never;
        responses: {
            /** @description User found */
            200: {
                headers: {
                    [name: string]: unknown;
                };
                content: {
                    "application/json": components["schemas"]["User"];
                };
            };
            /** @description Missing user */
            404: {
                headers: {
                    [name: string]: unknown;
                };
                content: {
                    "application/json": components["schemas"]["NotFound"];
                };
            };
        };
    };
}
>>> core/schemas.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate
import type { components } from './paths';

export type Components = components;
export type Schemas = components extends { schemas: infer T } ? T : never;
export type Parameters = components extends { parameters: infer T } ? T : never;
export type Responses = components extends { responses: infer T } ? T : never;
export type RequestBodies = components extends { requestBodies: infer T } ? T : never;
export type Headers = components extends { headers: infer T } ? T : never;
export type CreateUserInput = Schemas["CreateUserInput"];
export type NotFound = Schemas["NotFound"];
export type User = Schemas["User"];
>>> index.ts
// This file is auto-generated by better-swagger-types. DO NOT EDIT.
// Run: npx better-swagger-types generate

export * as Core from './core/index';"
`;
